Rename jstyle methods, use modern java syntax
Signed-off-by: subhramit <subhramit.bb@live.in>